Good progress and styling, still need a bit of tweaking for mobile, still need JS logic for swapping images at transition point. WIP.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <div id="bannerSection">
         <div id="bannerTextContainer">
-          <div id="bannerTitle">
+          <div id="bannerHeadline">
             
           </div>
-          <div id="bannerSubText">
+          <div id="bannerCopy">
             
           </div>
         </div>
